	PR c++/28593 	* init.c (build_new): Return early on invalid placement.

* g++.dg/parse/new3.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@116191 138bc75d-0d04-0410-961f-82ee72b054a4