gcc/testsuite/g++.dg/parse/new3.C
@@ -1,0 +1,4 @@
+// PR c++/28593
+// { dg-do compile }
+
+void *p = new (::X;  // { dg-error "declared|type-specifier" }
